--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.2.2"
-oda-data = "^1.3.2"
+oda-data = "^1.3.3"
+pyarrow = ">=16.0"
 
 
 [build-system]
