--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,20 @@
-[tool.poetry]
-name = "oda-imputed-sectors"
-package-mode = false
+[project]
+name = "imputed-multi-sectors"
+description = ""
+authors = [
+    {name = "Jorge Rivera",email = "Jorge.Rivera@one.org"}
+]
 readme = "README.md"
+requires-python = ">=3.10, <4.0"
+dependencies = [
+    "pandas (>=2.2.3,<3.0.0)",
+    "oda-data (>=1.5.2,<2.0.0)"
+]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-pandas = "^2.2.2"
-oda-data = "^1.3.3"
-pyarrow = ">=16.0"
+[tool.poetry]
+package-mode = false
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
